fix: String.isBlank() → trim().isEmpty() for Java 8 compatibility (#103)
String.isBlank() is Java 11+; the project targets Java 8, causing a
compilation error in GlobalExceptionHandler introduced in #102.

https://claude.ai/code/session_01PWxBmFaTHYDnRLbxvZD7B8

Co-authored-by: Claude <noreply@anthropic.com>